[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
number_types = { version = "0.1.0", path = "../number_types" }
actix-rt = "2.9.0"
actix-web = "4.4.0"
derive_more = "0.99.11"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
utoipa = { version = "4.1.0", features = ["chrono", "actix_extras"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["actix-web"] }
